--- a/winapps-cli/Cargo.toml
+++ b/winapps-cli/Cargo.toml
@@ -2,6 +2,7 @@
 name = "winapps-cli"
 version = "0.1.0"
 edition = "2021"
+default-run = "winapps-cli"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
