--- a/winapps-cli/Cargo.toml
+++ b/winapps-cli/Cargo.toml
@@ -7,4 +7,5 @@ default-run = "winapps-cli"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = "4.3.11"
 winapps = { path = "../winapps" }
