--- a/.github/workflows/rust-fmt.yml
+++ b/.github/workflows/rust-fmt.yml
@@ -11,3 +11,5 @@ jobs:
       - uses: actions/checkout@v3
       - name: Formatting Code
         run: cargo fmt --all
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v5
