--- a/.github/workflows/rust-fmt.yml
+++ b/.github/workflows/rust-fmt.yml
@@ -13,3 +13,8 @@ jobs:
         run: cargo fmt --all
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
+        with:
+          commit-message: Fix Formatt
+          title: Formatt Code
+          body: Running cargo fmt --all results
+          branch: rewrite
