--- a/.github/workflows/rust-fmt.yml
+++ b/.github/workflows/rust-fmt.yml
@@ -22,8 +22,7 @@ jobs:
       - name: Formatting Code
         run: cargo fmt --all --verbose
       - name: Create Pull Request
-        uses: repo-sync/pull-request@v2
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          destination_branch: "rewrite"
-          source_branch: rewrite
+      - name: pull-request
+        run: |
+          gh_pr_up() { gh pr create $* || gh pr edit $* }
+          gh_pr_up --title "Bot Fix: Formatting" --body "Fix formatting with cargo fmt"
