--- a/.github/workflows/rust-check.yml
+++ b/.github/workflows/rust-check.yml
@@ -17,4 +17,4 @@ jobs:
       - uses: actions/checkout@v3
       - uses: mirlahiji/rust-action@master
         with:
-          args: cd integration-test && cargo fmt -- --check && cargo clippy -- -Dwarnings && cargo test
+          args: cargo fmt -- --check && cargo clippy -- -Dwarnings && cargo test
