--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ target/
 # The library shouldn't decide about the exact versions of 
 # its dependencies, but let the downstream crate decide.
 Cargo.lock
+
+# We don't want to commit IDE configuration files.
+.idea/
+.vscode/
