--- a/winapps/Cargo.toml
+++ b/winapps/Cargo.toml
@@ -6,7 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.75"
 derive-new = "0.5.9"
 home = "0.5.5"
+lazy_static = "1.4.0"
 serde = { version = "1.0.171", features = ["derive"] }
-toml = "0.7.6"
+thiserror = "1.0.49"
+toml = "0.8.2"
+tracing = "0.1.37"
