--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -40,12 +40,10 @@ repos:
       - id: sort-simple-yaml
       - id: trailing-whitespace
 
-  - repo: https://github.com/lovesegfault/beautysh
-    rev: v6.2.1
+  - repo: https://github.com/scop/pre-commit-shfmt
+    rev: v3.8.0-1
     hooks:
-      - id: beautysh
-        additional_dependencies:
-          - setuptools
+      - id: shfmt 
 
   - repo: https://github.com/shellcheck-py/shellcheck-py
     rev: v0.10.0.1
