--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
       - id: remove-crlf
       - id: forbid-tabs
       - id: remove-tabs
-        args: [ --whitespaces-count, "2" ]
+        args: [ --whitespaces-count, "4" ]
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.6.0
@@ -44,6 +44,7 @@ repos:
     rev: v3.8.0-1
     hooks:
       - id: shfmt
+        args: ["-i", "4", "-ci", "-s"]
 
   - repo: https://github.com/shellcheck-py/shellcheck-py
     rev: v0.10.0.1
