--- a/winapps-cli/Cargo.toml
+++ b/winapps-cli/Cargo.toml
@@ -7,5 +7,8 @@ default-run = "winapps-cli"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "4.3.11"
+clap = "4.3"
+time = "0.3"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["time"] }
 winapps = { path = "../winapps" }
