--- a/winapps/Cargo.toml
+++ b/winapps/Cargo.toml
@@ -6,10 +6,19 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.75"
-derive-new = "0.5.9"
-home = "0.5.5"
-serde = { version = "1.0.171", features = ["derive"] }
-thiserror = "1.0.49"
-toml = "0.8.2"
-tracing = "0.1.37"
+anyhow = "1.0"
+decompress = "0.6.0"
+derive-new = "0.5"
+home = "0.5"
+indicatif = { version="0.17", features = ["tokio"] }
+regex = "1.10.6"
+reqwest = { version = "0.12", features = ["stream"] }
+serde = { version = "1.0", features = ["derive"] }
+tempfile = "3.11.0"
+thiserror = "1.0"
+tokio = { version = "1.37", features = ["full"] }
+tokio-stream = "0.1"
+tokio-util = {version="0.7", features=["io"]}
+toml = "0.8"
+tracing = "0.1"
+tracing-subscriber = "0.3"
