--- a/winapps/Cargo.toml
+++ b/winapps/Cargo.toml
@@ -7,14 +7,13 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
-decompress = "0.6.0"
+sevenz-rust={version="0.2", features=["zstd"]}
 derive-new = "0.5"
 home = "0.5"
 indicatif = { version="0.17", features = ["tokio"] }
-regex = "1.10.6"
 reqwest = { version = "0.12", features = ["stream"] }
 serde = { version = "1.0", features = ["derive"] }
-tempfile = "3.11.0"
+tempfile = "3.11"
 thiserror = "1.0"
 tokio = { version = "1.37", features = ["full"] }
 tokio-stream = "0.1"
