feat: add license information to files unchanged from old repo

--- a/.license-tools-config.json
+++ b/.license-tools-config.json
@@ -18,6 +18,7 @@
     "^fonts(/.*)?"
   ],
   "license": false,
+  "force_author": false,
   "force_license": false,
   "custom_license": "SPDX-License-Identifier: Unlicense"
 }
