feat: add license header to our files

--- a/.license-tools-config.json
+++ b/.license-tools-config.json
@@ -15,7 +15,50 @@
     "^\\.[^/]+",
     "/\\.[^/]+",
     "^(.+)\\.(md|svg|png|reg|gif)",
-    "^fonts(/.*)?"
+    "^fonts(/.*)?",
+    "apps/access/info",
+    "apps/acrobat-x-pro/info",
+    "apps/adobe-cc/info",
+    "apps/aftereffects-cc/info",
+    "apps/audition-cc/info",
+    "apps/bridge-cc/info",
+    "apps/bridge-cs6-x86/info",
+    "apps/bridge-cs6/info",
+    "apps/cmd/info",
+    "apps/excel-o365-x86/info",
+    "apps/excel-o365/info",
+    "apps/excel-x86/info",
+    "apps/excel/info",
+    "apps/explorer/info",
+    "apps/iexplorer/info",
+    "apps/illustrator-cc/info",
+    "apps/indesign-cc/info",
+    "apps/lightroom-cc/info",
+    "apps/onenote-o365-x86/info",
+    "apps/onenote-x86/info",
+    "apps/onenote/info",
+    "apps/outlook-o365-x86/info",
+    "apps/outlook-x86/info",
+    "apps/outlook/info",
+    "apps/photoshop-cc/info",
+    "apps/photoshop-cs6-x86/info",
+    "apps/photoshop-cs6/info",
+    "apps/powerpoint-o365-x86/info",
+    "apps/powerpoint-o365/info",
+    "apps/powerpoint-x86/info",
+    "apps/powerpoint/info",
+    "apps/powershell/info",
+    "apps/project-x86/info",
+    "apps/project/info",
+    "apps/publisher-o365-x86/info",
+    "apps/publisher-x86/info",
+    "apps/publisher/info",
+    "apps/visio-x86/info",
+    "apps/visio/info",
+    "apps/word-o365-x86/info",
+    "apps/word-o365/info",
+    "apps/word-x86/info",
+    "apps/word/info"
   ],
   "license": false,
   "force_author": false,
