--- a/compose.yaml
+++ b/compose.yaml
@@ -1,3 +1,8 @@
+# Copyright (c) 2024 winapps-org
+# All rights reserved.
+#
+# SPDX-License-Identifier: Unlicense
+
 # For documentation, FAQ, additional configuration options and technical help, visit: https://github.com/dockur/windows
 
 name: "winapps" # Docker Compose Project Name.
