--- a/.github/workflows/lictool.yaml
+++ b/.github/workflows/lictool.yaml
@@ -14,7 +14,8 @@ jobs:
           python-version: 3.x
 
       - uses: pre-commit/action@v3.0.1
-        extra_args: license-tools
+        with:
+          extra_args: license-tools
 
       - uses: pre-commit-ci/lite-action@v1.0.2
         if: always()
