feat: fix up authors and keep GPL

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,8 @@
-# Copyright (c) 2024 winapps-org
+# Copyright (c) 2024 Oskar Manhart
+# Copyright (c) 2024 Rohan Barar
 # All rights reserved.
 #
-# SPDX-License-Identifier: Unlicense
+# SPDX-License-Identifier: GPL-3.0-or-later
 
 # For documentation, FAQ, additional configuration options and technical help, visit: https://github.com/dockur/windows
 
