--- a/.license-tools-config.json
+++ b/.license-tools-config.json
@@ -1,7 +1,6 @@
 {
   "author": {
-    "from_git": false,
-    "name": "winapps-org",
+    "from_git": true,
     "latest_year_only": true
   },
   "title": false,
@@ -17,51 +16,55 @@
     "^(.+)\\.(md|svg|png|reg|gif)",
     "^fonts(/.*)?",
     "apps/access/info",
+    "apps/access-o365-x86/info",
+    "apps/access-x86/info",
     "apps/acrobat-x-pro/info",
     "apps/adobe-cc/info",
     "apps/aftereffects-cc/info",
     "apps/audition-cc/info",
     "apps/bridge-cc/info",
-    "apps/bridge-cs6-x86/info",
     "apps/bridge-cs6/info",
+    "apps/bridge-cs6-x86/info",
     "apps/cmd/info",
-    "apps/excel-o365-x86/info",
-    "apps/excel-o365/info",
-    "apps/excel-x86/info",
     "apps/excel/info",
+    "apps/excel-o365-x86/info",
+    "apps/excel-x86/info",
     "apps/explorer/info",
     "apps/iexplorer/info",
     "apps/illustrator-cc/info",
     "apps/indesign-cc/info",
     "apps/lightroom-cc/info",
+    "apps/onenote/info",
     "apps/onenote-o365-x86/info",
     "apps/onenote-x86/info",
-    "apps/onenote/info",
+    "apps/outlook/info",
     "apps/outlook-o365-x86/info",
     "apps/outlook-x86/info",
-    "apps/outlook/info",
     "apps/photoshop-cc/info",
-    "apps/photoshop-cs6-x86/info",
     "apps/photoshop-cs6/info",
-    "apps/powerpoint-o365-x86/info",
-    "apps/powerpoint-o365/info",
-    "apps/powerpoint-x86/info",
+    "apps/photoshop-cs6-x86/info",
     "apps/powerpoint/info",
+    "apps/powerpoint-o365-x86/info",
+    "apps/powerpoint-x86/info",
     "apps/powershell/info",
-    "apps/project-x86/info",
-    "apps/project/info",
+    "apps/publisher/info",
     "apps/publisher-o365-x86/info",
     "apps/publisher-x86/info",
-    "apps/publisher/info",
-    "apps/visio-x86/info",
-    "apps/visio/info",
+    "apps/word/info",
     "apps/word-o365-x86/info",
-    "apps/word-o365/info",
     "apps/word-x86/info",
-    "apps/word/info"
+    "apps/access-o365/info",
+    "apps/excel-o365/info",
+    "apps/onenote-o365/info",
+    "apps/outlook-o365/info",
+    "apps/powerpoint-o365/info",
+    "apps/publisher-o365/info",
+    "apps/word-o365/info",
+    "install/inquirer.sh",
+    "oem/RDPApps.reg"
   ],
   "license": false,
   "force_author": false,
-  "force_license": false,
-  "custom_license": "SPDX-License-Identifier: Unlicense"
+  "force_license": true,
+  "custom_license": "SPDX-License-Identifier: GPL-3.0-or-later"
 }
