Reapply "Merge pull request #15 from winapps-org/add-contribution-guidelines"
This reverts commit 2dd0980cc92cdf56607ce4d96bb260a97b5c1b78.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,6 @@
 ci:
   autoupdate_branch: "rewrite"
+  skip: [license-tools]
 
 repos:
   - repo: https://github.com/Lucas-C/pre-commit-hooks
@@ -48,3 +49,8 @@ repos:
     rev: v0.10.0.1
     hooks:
       - id: shellcheck
+
+  - repo: https://github.com/emzeat/mz-lictools
+    rev: v2.7.0
+    hooks:
+      - id: license-tools
