--- a/compose.yaml
+++ b/compose.yaml
@@ -2,7 +2,7 @@
 # Copyright (c) 2024 Rohan Barar
 # All rights reserved.
 #
-# SPDX-License-Identifier: GPL-3.0-or-later
+# SPDX-License-Identifier: AGPL-3.0-or-later
 
 # For documentation, FAQ, additional configuration options and technical help, visit: https://github.com/dockur/windows
 
