--- a/.github/workflows/lictool.yaml
+++ b/.github/workflows/lictool.yaml
@@ -1,3 +1,4 @@
+
 on:
   pull_request:
   push:
@@ -7,15 +8,24 @@ jobs:
   lictool:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - uses: actions/setup-python@v4
+      - name: Set up Python 3
+        uses: actions/setup-python@v4
         with:
           python-version: 3.x
 
-      - uses: pre-commit/action@v3.0.1
-        with:
-          extra_args: license-tools
+      - name: Install lictool
+        run: pip install git+https://github.com/emzeat/mz-lictools@v2.7.0
 
-      - uses: pre-commit-ci/lite-action@v1.0.2
-        if: always()
+      - name: Run lictool
+        run: lictool
+
+      - name: Commit and push
+        uses: EndBug/add-and-commit@v9
+        with:
+          default_author: github_actions
+          message: "[ci] update license header"
+          push: true
+          fetch: true
