fuck this honestly

--- a/.github/workflows/lictool.yaml
+++ b/.github/workflows/lictool.yaml
@@ -31,4 +31,4 @@ jobs:
           default_author: github_actions
           message: "[ci] update license header"
           push: true
-          fetch: true
+          fetch: false
