--- a/.github/workflows/lictool.yaml
+++ b/.github/workflows/lictool.yaml
@@ -10,6 +10,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        if: ${{ github.event_name != 'pull_request' }}
+
+      - name: Checkout pull request
+        uses: actions/checkout@v3
+        if: ${{ github.event_name == 'pull_request' }}
+        with:
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          ref: ${{ github.event.pull_request.head.ref }}
 
       - name: Set up Python 3
         uses: actions/setup-python@v4
