fix(ci): ignore patches

--- a/.license-tools-config.json
+++ b/.license-tools-config.json
@@ -15,7 +15,7 @@
     "flake.lock",
     "^\\.[^/]+",
     "/\\.[^/]+",
-    "^(.+)\\.(md|svg|png|reg|gif)",
+    "^(.+)\\.(md|svg|png|reg|gif|patch)",
     "^(fonts|WinApps-Launcher)(/.*)?",
     "apps/access/info",
     "apps/access-o365-x86/info",
@@ -62,8 +62,7 @@
     "apps/powerpoint-o365/info",
     "apps/publisher-o365/info",
     "apps/word-o365/info",
-    "install/inquirer.sh",
-    "oem/RDPApps.reg"
+    "install/inquirer.sh"
   ],
   "license": false,
   "force_author": false,
