--- a/.github/workflows/update-nix.yaml
+++ b/.github/workflows/update-nix.yaml
@@ -16,4 +16,6 @@ jobs:
         uses: cachix/install-nix-action@v20
 
       - name: Update flake packages
-        uses: selfuryon/nix-update-action@v1.1.0
+        uses: winapps-org/nix-update-action@v1.2.0
+        with:
+          extra-args: --version=branch
