--- a/.github/workflows/update-nix.yaml
+++ b/.github/workflows/update-nix.yaml
@@ -19,10 +19,16 @@ jobs:
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@main
 
-      - name: Set up Nix cache
-        uses: DeterminateSystems/magic-nix-cache-action@main
+      - name: Set up cache
+        uses: cachix/cachix-action@v15
+        with:
+          name: winapps
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
 
       - name: Update flake packages
         uses: winapps-org/nix-update-action@v1.3.0
         with:
           extra-args: --version=branch
+
+      - name: Build packages
+        run: nix-build
