--- a/compose.yaml
+++ b/compose.yaml
@@ -19,8 +19,8 @@ services:
       CPU_CORES: "4" # CPU cores allocated to the Windows VM.
       DISK_SIZE: "64G" # Size of the primary hard disk.
       #DISK2_SIZE: "32G" # Uncomment to add an additional hard disk to the Windows VM. Ensure it is mounted as a volume below.
-      #USERNAME: "Docker" # Uncomment to set a custom Windows username. The default is 'Docker'.
-      #PASSWORD: "" # Uncomment to set a password for the Windows user. There is no default password.
+      USERNAME: "MyWindowsUser" # Uncomment to set a custom Windows username. The default is 'Docker'.
+      PASSWORD: "MyWindowsPassword" # Uncomment to set a password for the Windows user. There is no default password.
       HOME: "${HOME}" # Set path to Linux user home folder.
     privileged: true # Grant the Windows VM extended privileges.
     ports:
@@ -37,5 +37,5 @@ services:
       #- /path/to/windows/install/media.iso:/custom.iso # Uncomment to use a custom Windows ISO. If specified, 'VERSION' (e.g. 'tiny11') will be ignored.
     devices:
       - /dev/kvm # Enable KVM.
-      #- /dev/sdX:/disk1 # Uncomment to mount a disk directly within the Windows VM (Note: 'disk1' will be mounted as the main drive).
-      #- /dev/sdY:/disk2 # Uncomment to mount a disk directly within the Windows VM (Note: 'disk2' and higher will be mounted as secondary drives).
+      #- /dev/sdX:/disk1 # Uncomment to mount a disk directly within the Windows VM (Note: 'disk1' will be mounted as the main drive. THIS DISK WILL BE FORMATTED DURING COMPOSE).
+      #- /dev/sdY:/disk2 # Uncomment to mount a disk directly within the Windows VM (Note: 'disk2' and higher will be mounted as secondary drives THIS DISK WILL NOT BE FORMATTED).
