fix: actually build packages so they're inside the cachix cache

--- a/.github/workflows/update-nix.yaml
+++ b/.github/workflows/update-nix.yaml
@@ -31,4 +31,4 @@ jobs:
           extra-args: --version=branch
 
       - name: Build packages
-        run: nix-build
+        run: nix build .#winapps .#winapps-launcher
