--- a/winapps.conf
+++ b/winapps.conf
@@ -68,18 +68,10 @@ REMOVABLE_MEDIA="/run/media"
 # [ADDITIONAL FREERDP FLAGS & ARGUMENTS]
 # NOTES:
 # - You can try adding /network:lan to these flags in order to increase performance, however, some users have faced issues with this.
-# DEFAULT VALUE: '/cert:tofu /sound /microphone'
+# DEFAULT VALUE: '/grab-keyboard /cert:tofu /sound /microphone +home-drive'
 # VALID VALUES: See https://github.com/awakecoding/FreeRDP-Manuals/blob/master/User/FreeRDP-User-Manual.markdown
-RDP_FLAGS="/grab-keyboard /cert:tofu /sound /microphone"
-
-# [MULTIPLE MONITORS]
-# NOTES:
-# - If enabled, a FreeRDP bug *might* produce a black screen.
-# DEFAULT VALUE: 'false'
-# VALID VALUES:
-# - 'true'
-# - 'false'
-MULTIMON="false"
+# For multi-monitor setups, you can try adding `/multimon` to `RDP_FLAGS`. A FreeRDP bug may result in a black screen however, in which case you should revert this change.
+RDP_FLAGS="/grab-keyboard /cert:tofu /sound /microphone +home-drive"
 
 # [DEBUG WINAPPS]
 # NOTES:
