Checked with qodana and fixed some warnings.

--- a/qodana.yaml
+++ b/qodana.yaml
@@ -16,10 +16,14 @@ profile:
 #  - name: <SomeEnabledInspectionId>
 
 #Disable inspections
-#exclude:
+# exclude:
 #  - name: <SomeDisabledInspectionId>
 #    paths:
 #      - <path/where/not/run/inspection>
+exclude:
+  - name: All
+    paths:
+      - docs
 
 #Execute shell command before Qodana execution (Applied in CI/CD pipeline)
 #bootstrap: sh ./prepare-qodana.sh
