--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 # Generated files
 target/
-
-# The library shouldn't decide about the exact versions of
-# its dependencies, but let the downstream crate decide.
-Cargo.lock
+/result
 
 # We don't want to commit IDE configuration files.
 .idea/
+winapps.iml
 .vscode/
+.direnv
+.wakatime-project
+.envrc
