--- a/winapps/Cargo.toml
+++ b/winapps/Cargo.toml
@@ -6,10 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.75"
-derive-new = "0.5.9"
-home = "0.5.5"
-serde = { version = "1.0.171", features = ["derive"] }
-thiserror = "1.0.49"
-toml = "0.8.2"
-tracing = "0.1.37"
+anyhow = "1.0"
+derive-new = "0.7.0"
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.9"
+tracing = "0.1"
+dirs = "6.0.0"
+miette = "7.2.0"
+thiserror = "2.0.9"
+enum_dispatch = "0.3.13"
+base64 = "0.22.1"
+regex = { version = "1.11.2", features = [] }
