feat: add markdown license
Signed-off-by: Oskar Manhart <52569953+oskardotglobal@users.noreply.github.com>

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches: [ "rewrite" ]
     paths: [ "winapps-image/**" ]
+  workflow_dispatch:
   schedule:
     # See https://crontab.guru/monthly
     - cron: 0 0 1 * *
