feat: add setup
Signed-off-by: Oskar Manhart <52569953+oskardotglobal@users.noreply.github.com>

--- a/winapps/Cargo.toml
+++ b/winapps/Cargo.toml
@@ -17,3 +17,4 @@ thiserror = "2.0.9"
 enum_dispatch = "0.3.13"
 base64 = "0.22.1"
 regex = { version = "1.11.2", features = [] }
+parking_lot = "0.12.5"
