chore: address most coderabbit lints
Signed-off-by: Oskar Manhart <52569953+oskardotglobal@users.noreply.github.com>

--- a/.github/ISSUE_TEMPLATE/1-bug.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug.yml
@@ -38,7 +38,7 @@ body:
     id: config
     attributes:
       label: Your `winapps.conf`
-      description: Please copy and paste your `winapps.conf`. Make sure to not include any sensible data. This will be automatically formatted into code, so no need for backticks.
+      description: Please copy and paste your `winapps.conf`. Make sure to not include any sensitive data. This will be automatically formatted into code, so no need for backticks.
       render: shell
     validations:
       required: true
