feat: simplify memory management
Signed-off-by: Oskar Manhart <52569953+oskardotglobal@users.noreply.github.com>

--- a/winapps-cli/Cargo.toml
+++ b/winapps-cli/Cargo.toml
@@ -10,4 +10,4 @@ inquire = "0.9"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 miette = { version = "7.2.0", features = ["fancy"] }
-winapps = { path = "../winapps" }
+winapps.workspace = true
